Replace service's NodePort with LoadBalancer

--- a/deployment.yml
+++ b/deployment.yml
@@ -55,7 +55,6 @@ metadata:
 spec:
   selector:
     app: nginx
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: 80
-      nodePort: 30800
