Replace Ingress with Gateway API

--- a/values.yml
+++ b/values.yml
@@ -4,6 +4,10 @@ ingress-controller:
   config:
     apisix:
       serviceNamespace: ingress-apisix
+    image:
+      tag: "1.6.1"
+    kubernetes:
+      enableGatewayAPI: true
 gateway:
   type: NodePort
   http:
