--- a/gateway.yml
+++ b/gateway.yml
@@ -1,27 +1,17 @@
 apiVersion: gateway.networking.k8s.io/v1alpha2
 kind: HTTPRoute
 metadata:
-  name: left
+  name: dispatch
 spec:
   rules:
     - matches:
-      - path:
-          type: PathPrefix
-          value: /left
+      - headers:
+          - type: Exact
+            name: to
+            value: left
       backendRefs:
       - name: left
         port: 80
----
-apiVersion: gateway.networking.k8s.io/v1alpha2
-kind: HTTPRoute
-metadata:
-  name: right
-spec:
-  rules:
-    - matches:
-      - path:
-          type: PathPrefix
-          value: /right
-      backendRefs:
+    - backendRefs:
       - name: right
         port: 80
